--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,8 +81,9 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 800px;
   overflow-x: hidden;
+  margin: auto;
 }
 
 body {
@@ -93,11 +94,212 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  margin: 0vw 2vw 0vw 2vw; 
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+div#cabecalho{
+  margin: 4vw 0vw 2vw 0vw;
+  display:flex;
+  align-items: center;
+  width: 96%;
+  height: 20vw;
+}
+
+div#cabecalho>a{
+  width: 10vw;
+  height: 10vw;
+  padding: 0vw 5vw 0vw 5vw;
+  font-size: xx-large;
+  font-weight: bolder;
+}
+
+div#cabecalho>h1{
+  width: 82%;
+  height: 10vw;
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bolder;
+}
+
+
+div#ccrd{
+  margin: 4vw 0vw 2vw 0vw;
+  display:flex;
+  align-items: center;
+  width: 96%;
+  height: 10vw;
+}
+
+div#ccrd>a{
+  width: 10vw;
+  height: 10vw;
+  padding: 0vw 2vw 0vw 2vw;
+  font-size: xx-large;
+  font-weight: bolder;
+}
+
+div#ccrd>h1{
+  width: 82%;
+  height: 10vw;
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bolder;
+}
+
+
+div#links{
+  width: 96%;
+  padding: 2vw;
+  background-color: rgb(18, 18, 18);
+  border-radius: 2vw;
+  text-align: center;
+  font-size: xx-large;
+}
+
+div#links>a{
+  display: inline-block;
+  width: 44%;
+  margin: 1vw;
+  padding: 1vw;
+  border-radius: 1vw;
+  background-color: rgb(36, 36, 36);
+}
+
+h1{
+  font-size: xx-large;
+  text-align: center;
+  margin: 5vw 0vw 5vw 0vw;
+}
+
+ul{
+  margin: 2vw 0vw 2vw 0vw;
+  background-color: rgb(18, 18, 18);
+  padding: 1vw 1vw 1vw 1vw;
+  border-radius: 1vw;
+}
+
+li{
+  display: flex;
+  align-items: center;
+}
+
+li>img{
+  width: 27%;
+  margin: 1vw;
+}
+li>div{
+  width: 48%;
+  margin: 1vw 0vw 1vw 0vw;
+  font-size: medium;
+}
+li>h2, li>p{
+  display: block;
+}
+div.texto{
+display:flex;
+flex-direction: column;
+height: fit-content;
+margin: auto;
+}
+div.ud{
+  display: flex;
+  flex-direction: column;
+  width: 14%;
+}
+div.ud>button, div.pUD>button{
+
+  width: 90%;
+  margin: 0vw 1vw 0vw 1vw;
+  padding: 10px 0px;
+  background-color: rgb(255, 46, 46);
+  border: 0px solid rgba(0, 0, 0, 0);
+  border-radius: 2px;
+  color: black;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+}
+
+li.item{
+  display: flex;
+  flex-direction: column;
+  width: 96%;
+  margin: 0vw auto 0vw auto;
+  border-radius: 2vw;
+  background-color: black;
+}
+div.linha{
+  display:flex;
+  flex-direction: row;
+  width: 100%;
+  overflow-x: scroll;
+}
+div.preco{
+  display: flex;
+  width: 30%; 
+  text-align: center;
+  flex-direction: column;
+  margin: 0vw 2vw;
+}
+div.pTexto>p{
+  font-size: large;
+  font-weight: bold;
+}
+div.nMercado{
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+#atl{
+  display: flex;
+  align-items: center;
+  
+  width: 90%;
+  margin: 0vw 1vw 0vw 1vw;
+  padding: 10px 0px;
+  background-color: rgb(255, 191, 0);
+  border-radius: 2px;
+  color: black;
+  font-size: small;
+  font-weight: bold;
+}
+#atl>p{
+  margin: auto 0px auto 0px;
+  text-align: center;
+  width: 100%;
+}
+
+form{
+  background-color: rgb(18, 18, 18);
+  padding: 1vw 1vw 1vw 1vw;
+  margin-bottom: 10vw;
+  border-radius: 1vw;
+}
+
+label{
+  display: inline-block;
+  font-size: medium;
+  width: 27%;
+}
+
+input, select{
+  display: inline-block;
+  width: 67%;
+  font-size: medium;
+  margin: 1vw 0vw 1vw 0vw
+}
+
+form>button{
+  display: inline-block;
+  width: 67%;
+  font-size: medium;
+  margin: 1vw 0vw 1vw 0vw;
+  padding: 1vw 0vw 1vw 0vw;
 }
 
 @media (prefers-color-scheme: dark) {
