--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -9,6 +9,7 @@
 .main>li{
   display: flex;
 }
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -25,6 +26,13 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+}
+
+.desc{
+  display: none;
+}
+.desc:hover{
+  display: block;
 }
 
 .description p {
